src/test/deca/syntax/valid/decl_init_int.deca

// Description :
// Déclaration avec initialisation
//
// Resultats :
// ok
//

{
    int x = 5 ;
}