src/test/deca/syntax/invalid/double_int.deca
// Description :
// double decalration

// Resultats :
// Erreur contextuelle


{
    int int x;
}
